Local-only backend: filesystem storage, remove AWS CDK infra
Drop S3 and CDK; use local paths and OpenSearch. Update tests and config. Trim comments; ignore infra build output.